# ultralight-java

./: .gitignore  LICENSE  LICENSE_HEADER  README.md  VERSION  build.gradle  ci.gradle  deploy-settings.gradle  deploy.gradle  settings.gradle  version.gradle
.github/workflows/: ci.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: ultralight-java.example-conventions.gradle.kts
example/example-base/: build.gradle.kts
example/lwjgl3-opengl/: build.gradle
example/lwjgl3-opengl-old/: build.gradle
example/lwjgl3-opengl-old/src/main/resources/: shader_fill_path_frag.fs  shader_v2f_c4f_t2f_t2f_d28f.vs
example/lwjgl3-opengl/simple/: build.gradle.kts
ultralight-java-base/: build.gradle
ultralight-java-databind/: build.gradle
ultralight-java-databind-codegen/: build.gradle
ultralight-java-databind-generated-callers/: build.gradle
ultralight-java-glfw-opengl-util/: build.gradle  build.gradle.kts
ultralight-java-gpu/: build.gradle
ultralight-java-gpu-native/: CMakeLists.txt  build.gradle
ultralight-java-gpu-native/include/KHR/: khrplatform.h
ultralight-java-gpu-native/include/ultralight_java/gpudriver/: com_labymedia_ultralight_gpu_UltralightGPUDriverNativeUtil.h
ultralight-java-gpu-native/include/ultralight_java/gpudriver/common/: GPUDriverImpl.h
ultralight-java-gpu-native/include/ultralight_java/gpudriver/gl/: GPUContextGL.h  GPUDriverGL.h  glad.h  shader_fill_frag.h  shader_fill_path_frag.h  shader_v2f_c4f_t2f_t2f_d28f_vert.h  shader_v2f_c4f_t2f_vert.h
ultralight-java-gpu-native/src/gpudriver/: ultralight_java_gpu.cpp
ultralight-java-gpu-native/src/gpudriver/common/: GPUDriverImpl.cpp
ultralight-java-gpu-native/src/gpudriver/gl/: GPUContextGL.cpp  GPUDriverGL.cpp  glad.c
ultralight-java-lwjgl3-opengl/: build.gradle
ultralight-java-lwjgl3-opengl/src/test/resources/: triangle.frag  triangle.vert
ultralight-java-native/: CMakeLists.txt  build.gradle
ultralight-java-native/include/ultralight_java/: ultralight_initializer.hpp  ultralight_java_instance.hpp
ultralight-java-native/include/ultralight_java/java_bridges/: bridegd_clipboard.hpp  bridged_file_system.hpp  bridged_load_listener.hpp  bridged_logger.hpp  bridged_view_listener.hpp  javascript_class_definition_jni.hpp  javascript_class_jni.hpp  javascript_context_lock_jni.hpp  javascript_global_context_jni.hpp  javascript_object_jni.hpp  javascript_value_jni.hpp  proxied_java_exception.hpp  ultralight_bitmap_jni.hpp  ultralight_bitmap_surface_jni.hpp  ultralight_key_event_jni.hpp  ultralight_platform_jni.hpp  ultralight_ref_ptr_jni.hpp  ultralight_renderer_jni.hpp  ultralight_surface_jni.hpp  ultralight_view_jni.hpp
ultralight-java-native/include/ultralight_java/util/: java_enum.hpp  jni_reference_wrapper.hpp  local_jni_reference_wrapper.hpp  temporary_jni.hpp  util.hpp
ultralight-java-native/src/: ultralight_initializer.cpp  ultralight_java_instance.cpp
ultralight-java-native/src/java_bridges/: bridged_clipboard.cpp  bridged_file_system.cpp  bridged_gpu_driver.cpp  bridged_load_listener.cpp  bridged_logger.cpp  bridged_view_listener.cpp  javascript_class_definition_jni.cpp  javascript_class_jni.cpp  javascript_context_jni.cpp  javascript_context_lock_jni.cpp  javascript_global_context_jni.cpp  javascript_object_jni.cpp  javascript_value_jni.cpp  proxied_java_exception.cpp  ultralight_bitmap_jni.cpp  ultralight_bitmap_surface_jni.cpp  ultralight_key_event_jni.cpp  ultralight_matrix4x4_jni.cpp  ultralight_matrix_jni.cpp  ultralight_platform_jni.cpp  ultralight_ref_ptr_jni.cpp  ultralight_surface_jni.cpp  ultralight_view_jni.cpp
ultralight-java-native/src/main/c/: .clang-format  CMakeLists.txt
ultralight-java-native/src/main/c/include/ultralight_java/: ultralight_initializer.hpp  ultralight_java_instance.hpp
ultralight-java-native/src/main/c/include/ultralight_java/java_bridges/: bridegd_clipboard.hpp  bridged_file_system.hpp  bridged_gpu_driver.hpp  bridged_load_listener.hpp  bridged_logger.hpp  bridged_view_listener.hpp  javascript_class_definition_jni.hpp  javascript_class_jni.hpp  javascript_context_jni.hpp  javascript_context_lock_jni.hpp  javascript_global_context_jni.hpp  javascript_object_jni.hpp  javascript_value_jni.hpp  proxied_java_exception.hpp  ultralight_bitmap_jni.hpp  ultralight_bitmap_surface_jni.hpp  ultralight_commandlist_jni.hpp  ultralight_key_event_jni.hpp  ultralight_matrix4x4_jni.hpp  ultralight_matrix_jni.hpp  ultralight_platform_jni.hpp  ultralight_ref_ptr_jni.hpp  ultralight_renderer_jni.hpp  ultralight_surface_jni.hpp  ultralight_view_jni.hpp
ultralight-java-native/src/main/c/include/ultralight_java/platform/: managed_javascript_class.hpp  windows_impl.hpp
ultralight-java-native/src/main/c/include/ultralight_java/util/: java_enum.hpp  jni_reference_wrapper.hpp  local_jni_reference_wrapper.hpp  temporary_jni.hpp  util.hpp
ultralight-java-native/src/main/c/src/: ultralight_initializer.cpp  ultralight_java_instance.cpp
ultralight-java-native/src/main/c/src/java_bridges/: bridged_clipboard.cpp  bridged_file_system.cpp  bridged_gpu_driver.cpp  bridged_load_listener.cpp  bridged_logger.cpp  bridged_view_listener.cpp  javascript_class_definition_jni.cpp  javascript_class_jni.cpp  javascript_context_jni.cpp  javascript_context_lock_jni.cpp  javascript_global_context_jni.cpp  javascript_object_jni.cpp  javascript_value_jni.cpp  proxied_java_exception.cpp  ultralight_bitmap_jni.cpp  ultralight_bitmap_surface_jni.cpp  ultralight_commandlist_jni.cpp  ultralight_key_event_jni.cpp  ultralight_matrix4x4_jni.cpp  ultralight_matrix_jni.cpp  ultralight_platform_jni.cpp  ultralight_ref_ptr_jni.cpp  ultralight_renderer_jni.cpp  ultralight_surface_jni.cpp  ultralight_view_jni.cpp
ultralight-java-native/src/main/c/src/platform/: managed_javascript_class.cpp  windows_impl.cpp
ultralight-java-native/src/main/c/src/util/: jni_reference_wrapper.cpp  temporary_jni.cpp  util.cpp
ultralight-java-native/src/platform/: managed_javascript_class.cpp
ultralight-java-native/src/util/: jni_reference_wrapper.cpp  temporary_jni.cpp  util.cpp
(+422 files in other folders)
